--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: rgba(89, 76, 238, 1);
+  background: linear-gradient(180deg, rgba(89, 76, 238, 1) 0%, #8dd0f5 100%);
   color: white;
   font-family: 'Ubuntu', sans-serif;
   font-size: 15px;
@@ -19,7 +19,7 @@ body {
 }
 
 main{
-  background-color: rgba(247, 9, 247, 0.432) ;
+  background-color: rgb(187, 56, 187) ;
   padding: 28px;
   border-radius: 20px;
 }
@@ -44,6 +44,7 @@ main{
 }
 
 .form input {
+
   padding: 8px;
   border-radius: 4px;
   border: none;
@@ -53,6 +54,7 @@ main{
 }
 
 .button {
+  cursor: pointer;
   background-color: white;
   padding: 9px 18px 9px 18px;
   border-radius: 4px;
